// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<header
  className="sc-dnqmqq fVUGZd"
>
  <div
    className="sc-iwsKbI dtVYUJ"
  >
    title
  </div>
</header>
`;

exports[`Section should render content 1`] = `
<header
  className="sc-dnqmqq fVUGZd"
>
  <div
    className="sc-iwsKbI dtVYUJ"
  >
    title
  </div>
  content
</header>
`;
